added login form and test

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,38 +1,74 @@
 .App {
-  text-align: center;
+    text-align: center;
 }
 
 .App-logo {
-  height: 40vmin;
-  pointer-events: none;
+    height: 40vmin;
+    pointer-events: none;
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+    .App-logo {
+        animation: App-logo-spin infinite 20s linear;
+    }
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+    background-color: #282c34;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: calc(10px + 2vmin);
+    color: white;
 }
 
 .App-link {
-  color: #61dafb;
+    color: #61dafb;
 }
 
 @keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
+    }
+}
+
+.field {
+    display: flex;
+    justify-content: space-between;
+}
+
+.flex-column {
+    display: flex;
+    flex-flow: column wrap;
+}
+
+.remember-me {
+    display: flex;
+    justify-content: space-between;
+    font-size: 14px;
+}
+
+.text-input {
+    padding: 5px;
+    margin-bottom: 5px;
+    border: 1px solid gray;
+    border-radius: 5px;
+    box-shadow: 1px solid gray;
+}
+
+.text-input:focus {
+    outline: 0;
+}
+
+.submit-button {
+    margin-top: 5px;
+    width: 75px;
+    align-self: center;
+    border-radius: 5px;
+    border: 1px solid gray;
 }
