--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -41,6 +41,7 @@
 .field {
   display: flex;
   justify-content: space-between;
+  color: #282c34;
 }
 
 .flex-column {
@@ -48,10 +49,15 @@
   flex-flow: column wrap;
 }
 
+.flex-row {
+  display: flex;
+  flex-flow: row wrap;
+}
+
 .remember-me {
   display: flex;
   justify-content: space-between;
-  font-size: 14px;
+  font-size: 18px;
 }
 
 .text-input {
@@ -68,8 +74,31 @@
 
 .submit-button {
   margin-top: 5px;
-  width: 75px;
+  width: 150px;
   align-self: center;
   border-radius: 5px;
   border: 1px solid gray;
+  color: #282c34;
+}
+
+.add-estate-button {
+  margin-top: 5px;
+  width: 250px;
+  align-self: center;
+  border-radius: 5px;
+  border: 1px solid gray;
+  color: #282c34;
+}
+
+.logout-button {
+  margin-top: 5px;
+  margin-right: 5px;
+  width: 150px;
+  align-self: center;
+  border-radius: 5px;
+  border: 1px solid gray;
+  color: #282c34;
+}
+.miniature {
+  padding-right: 24px;
 }
